syntax="proto3"; //版本号
package base;  //包名
option go_package = "base/";





//LoginData 客户端登入协议
message ClientLogin{
    uint64 userid=1;
    string token=2;
}
//ServerLogin 服务器连接登入协议
message ServerLogin{
    //uint64  serverid=1;  //0+0+sid+tid 4个2字节拼接
    uint32  tid=1;
    uint32  sid=2;
    string password=3;
}

//LoginResult 客户端or服务器 登入网关服的结果消息
message LoginResult{
    int32  code=1;   //0表示成功
    string msg=2;
    uint32  tid=3;
    uint32  sid=4;
    string  name=5;
}

message TestMsg{
    string txt=1;
}